add vim foreplay

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/rainbow_parentheses"]
 	path = bundle/rainbow_parentheses
 	url = https://github.com/kien/rainbow_parentheses.vim.git
+[submodule "bundle/vim-foreplay"]
+	path = bundle/vim-foreplay
+	url = https://github.com/tpope/vim-foreplay.git
